# endurance-training-app

./: .gitignore  README.md  pyproject.toml
backend/: server.py
backend/endurance_training_app/: __init__.py  airnow.py  display_utils.py  location_utils.py  purpleair.py  tipping_point.py  weather.py
frontend/: app.js  index.html  styles.css
